# xdigger

./: .gitignore  CMakeLists.txt  Imakefile  configure.h  drawpixmaps.c  flake.nix  highscore.c  runlevels.c  sound.c  sound.h  xdigger-1.0.10.tgz  xdigger.c  xdigger.desktop  xdigger.man
patches/: config.txt  dont-create-highscore.txt  escape-hyphen-in-manpage.txt
